--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Todo List</title>
+  </head>
 
+  <body>
+    <h1>TodoInput</h1>
+
+    <form id="taskForm">
+      <div class="container">
+        <div class="addbar">
+          <i class="fas fa-book"></i>
+          <input
+            type="text"
+            id="todoInput"
+            placeholder="New Todo"
+            autocomplete="off"
+          />
+        </div>
+        <div id="errorMessage" class="error-message"></div>
+        <button type="submit">Add New Task</button>
+      </div>
+    </form>
+
+    <h2>Todo List</h2>
+
+    <div class="buttons" id="clssification-btns">
+      <button id="all" onclick="displayAll()">All</button>
+      <button id="done" onclick="displayDone()">Done</button>
+      <button id="todo" onclick="displayTodo()">Todo</button>
+    </div>
+
+    <ul class="todo-list">
+     <!-- 
+      <li id="list-item">
+        <span id="inner-todo"></span>
+        <div class="icons">
+          <button class="check">
+            <i class="fa-regular fa-square"></i>
+          </button>
+          <button class="edit">
+            <i class="fa-solid fa-pen"></i>
+          </button>
+          <button class="delete">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </div>
+      </li>
+      -->
+    </ul>
+
+    <div id="edit-opacity">
+      <div class="edit-hidden" id="edit-overlay">
+        <h2>Rename Task</h2>
+        <input type="text" id="input-edition" />
+        <div id="errorMessage-edition" class="error-message"></div>
+        <div class="edition-buttons">
+          <button id="save">Save</button>
+          <button id="edit-cancel">Cancel</button>
+        </div>
+      </div>
+    </div>
+
+    <div id="delete-opacity">
+      <div class="delete-hidden" id="delete-overlay">
+        <h2 id="delete-title">Delete Task</h2>
+        <p id="delete-message">Are you sure you want to delete this task?</p>
+        <div class="deletion-buttons">
+          <button id="confirm">Confirm</button>
+          <button id="delete-cancel">Cancel</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="delete-buttons">
+      <button id="deleteDoneTasks">Delete Done Tasks</button>
+      <button id="deleteAllTasks">Delete All Tasks</button>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
+</html>
